# timely-coherent-logic

./: .gitignore  Cargo.toml  README.md  index.html  x.toml
s/: modest.css  render.py  render.sh
satumerator/: Cargo.toml  README.md  x.toml
satumerator/src/: backend.rs  gadgets.rs  kb.rs  lib.rs  satumerator.rs  solver_state.rs
src/: lib.rs
src/execution/: enumerate_candidates.rs  instantiate_conjuncts.rs  lower_plan.rs  mod.rs  sink.rs  split_containers.rs  trivial.rs
src/ground/: record.rs  variable.rs
src/matching/: expression.rs  mod.rs  plan.rs  planner.rs
src/unification/: metavariable.rs  mod.rs  pattern.rs  project.rs
timely-coherent-propagator/: Cargo.toml  README.md  x.toml
timely-coherent-propagator/src/: deduce.rs  lib.rs
timely-coherent-propagator/src/execution/: instantiate_conjuncts.rs  lower_plan.rs  mod.rs  sink.rs  split_container.rs  trivial.rs
timely-coherent-propagator/src/ground/: mod.rs  record.rs  variable.rs
timely-coherent-propagator/src/matching/: expression.rs  mod.rs  plan.rs  planner.rs
timely-coherent-propagator/src/unification/: metavariable.rs  mod.rs  pattern.rs  project.rs
