[package]
name = "timely-coherent-propagator"
version = "0.1.0"
authors = ["Paul Khuong <pvk@pvk.ca>"]
description = "The propagation core of a small coherent logic solver."
license = "MIT"
repository = "https://github.com/pkhuong/timely-coherent-logic"
keywords = ["logic", "coherent logic", "prover", "incremental"]
categories = ["mathematics"]
edition = "2018"

[dependencies]
abomonation = "0.7.3"
